--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
+<link rel="icon" type="image/png" href="icon-512.png" />
+<link rel="apple-touch-icon" href="icon-512.png" />
+<link rel="manifest" href="manifest.json">
+
+  <head>
   <meta charset="UTF-8" />
   <title>Assistant IA – Réponses mails</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
