--- a/index.html
+++ b/index.html
@@ -1,642 +1,28 @@
 <!DOCTYPE html>
 <html lang="fr">
-<link rel="icon" type="image/png" href="icon-512.png" />
-<link rel="apple-touch-icon" href="icon-512.png" />
-<link rel="manifest" href="manifest.json">
-
   <head>
-  <meta charset="UTF-8" />
-  <title>Assistant IA – Réponses mails</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <style>
-    :root {
-      --bg: #020617;
-      --bg-alt: #030712;
-      --card: #020617;
-      --card-alt: #020617;
-      --border-subtle: rgba(148, 163, 184, 0.35);
-      --accent: #38bdf8;
-      --accent-soft: rgba(56, 189, 248, 0.14);
-      --accent-strong: rgba(56, 189, 248, 0.32);
-      --text: #e5e7eb;
-      --text-soft: #9ca3af;
-      --danger: #f97373;
-    }
+    <meta charset="UTF-8" />
+    <title>Assistant IA – Réponses mails</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    * {
-      box-sizing: border-box;
-    }
+    <!-- Icônes & PWA -->
+    <link rel="icon" type="image/png" href="icon-512.png" />
+    <link rel="apple-touch-icon" href="icon-512.png" />
+    <link rel="manifest" href="manifest.json">
+    <meta name="theme-color" content="#0f172a" />
 
-    body {
-      margin: 0;
-      padding: 0;
-      min-height: 100vh;
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-      background:
-        radial-gradient(circle at top left, rgba(56,189,248,0.2), transparent 55%),
-        radial-gradient(circle at bottom right, rgba(59,130,246,0.18), transparent 60%),
-        #020617;
-      color: var(--text);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-
-    .shell {
-      width: 100%;
-      max-width: 1120px;
-      margin: 24px;
-      padding: 1px;
-      border-radius: 26px;
-      background:
-        linear-gradient(135deg, rgba(148,163,184,0.4), rgba(15,23,42,0.9)),
-        radial-gradient(circle at top right, rgba(56,189,248,0.35), transparent 55%);
-      box-shadow:
-        0 26px 60px rgba(15,23,42,0.9),
-        0 0 0 1px rgba(15,23,42,0.9);
-    }
-
-    .app {
-      border-radius: 25px;
-      background:
-        radial-gradient(circle at top left, rgba(15,23,42,1), rgba(2,6,23,0.98)),
-        linear-gradient(145deg, #020617, #020617);
-      padding: 18px 20px 20px;
-      position: relative;
-      overflow: hidden;
-    }
-
-    .grid-overlay {
-      position: absolute;
-      inset: 0;
-      background-image:
-        linear-gradient(to right, rgba(15,23,42,0.8) 1px, transparent 1px),
-        linear-gradient(to bottom, rgba(15,23,42,0.8) 1px, transparent 1px);
-      background-size: 52px 52px;
-      opacity: 0.32;
-      pointer-events: none;
-      mix-blend-mode: soft-light;
-    }
-
-    header {
-      position: relative;
-      z-index: 1;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      gap: 12px;
-      padding-bottom: 10px;
-      border-bottom: 1px solid rgba(30,64,175,0.35);
-      margin-bottom: 14px;
-    }
-
-    .title-block h1 {
-      margin: 0;
-      font-size: 1.4rem;
-      letter-spacing: 0.03em;
-      display: flex;
-      align-items: center;
-      gap: 10px;
-    }
-
-    .chip {
-      font-size: 0.7rem;
-      padding: 2px 10px;
-      border-radius: 999px;
-      background: rgba(15,23,42,0.98);
-      color: var(--accent);
-      border: 1px solid rgba(56,189,248,0.5);
-    }
-
-    .subtitle {
-      margin: 4px 0 0;
-      font-size: 0.8rem;
-      color: var(--text-soft);
-    }
-
-    .badge {
-      display: inline-flex;
-      align-items: center;
-      gap: 7px;
-      padding: 5px 11px;
-      border-radius: 999px;
-      background: rgba(15,23,42,0.96);
-      border: 1px solid rgba(31,41,55,0.9);
-      font-size: 0.75rem;
-      color: var(--text-soft);
-    }
-
-    .badge-dot {
-      width: 8px;
-      height: 8px;
-      border-radius: 50%;
-      background: #22c55e;
-      box-shadow: 0 0 10px rgba(34,197,94,0.9);
-    }
-
-    main {
-      position: relative;
-      z-index: 1;
-      display: grid;
-      grid-template-columns: minmax(0, 1.1fr) minmax(0, 1fr);
-      gap: 14px;
-    }
-
-    @media (max-width: 900px) {
-      main {
-        grid-template-columns: 1fr;
+    <style>
+      :root {
+        --bg: #020617;
+        --bg-alt: #030712;
+        --card: #020617;
+        --card-alt: #020617;
+        --border-subtle: rgba(148, 163, 184, 0.35);
+        --accent: #38bdf8;
+        --accent-soft: rgba(56, 189, 248, 0.14);
+        --accent-strong: rgba(56, 189, 248, 0.32);
+        --text: #e5e7eb;
+        --text-soft: #9ca3af;
+        --danger: #f97373;
       }
-    }
-
-    .panel {
-      background:
-        radial-gradient(circle at top, rgba(15,23,42,1), rgba(2,6,23,0.98));
-      border-radius: 18px;
-      padding: 14px 16px 16px;
-      border: 1px solid rgba(30,64,175,0.45);
-      box-shadow:
-        0 18px 40px rgba(15,23,42,0.9),
-        0 0 0 1px rgba(15,23,42,0.9);
-      position: relative;
-      overflow: hidden;
-    }
-
-    .panel::before {
-      content: "";
-      position: absolute;
-      inset: 0;
-      background:
-        radial-gradient(circle at top left, rgba(56,189,248,0.08), transparent 55%);
-      opacity: 0.9;
-      pointer-events: none;
-    }
-
-    .panel-inner {
-      position: relative;
-      z-index: 1;
-    }
-
-    .panel h2 {
-      font-size: 0.95rem;
-      margin: 0 0 8px;
-      display: flex;
-      align-items: center;
-      gap: 8px;
-    }
-
-    .panel h2 span.icon {
-      font-size: 1.1rem;
-    }
-
-    .helper {
-      margin: 0 0 10px;
-      font-size: 0.8rem;
-      color: var(--text-soft);
-    }
-
-    label {
-      font-size: 0.8rem;
-      margin-bottom: 3px;
-      display: block;
-      color: var(--text-soft);
-    }
-
-    textarea, input {
-      width: 100%;
-      border-radius: 12px;
-      border: 1px solid rgba(51,65,85,0.95);
-      background: linear-gradient(145deg, rgba(15,23,42,0.98), rgba(15,23,42,1));
-      color: var(--text);
-      padding: 9px 11px;
-      font-size: 0.9rem;
-      font-family: inherit;
-      outline: none;
-      transition: border-color 0.15s ease, box-shadow 0.15s ease, background 0.15s ease;
-    }
-
-    textarea:focus, input:focus {
-      border-color: var(--accent);
-      box-shadow:
-        0 0 0 1px rgba(56,189,248,0.4),
-        0 12px 28px rgba(15,23,42,0.9);
-      background: linear-gradient(145deg, rgba(15,23,42,1), rgba(15,23,42,1));
-    }
-
-    textarea {
-      min-height: 140px;
-      resize: vertical;
-    }
-
-    .row {
-      display: flex;
-      gap: 10px;
-      flex-wrap: wrap;
-      margin-top: 10px;
-      margin-bottom: 6px;
-    }
-
-    .row > div {
-      flex: 1;
-      min-width: 160px;
-    }
-
-    .tone-buttons {
-      display: flex;
-      gap: 6px;
-      flex-wrap: wrap;
-      margin-top: 4px;
-    }
-
-    .tone-btn {
-      border-radius: 999px;
-      padding: 4px 12px;
-      border: 1px solid rgba(148,163,184,0.5);
-      background: rgba(15,23,42,0.96);
-      color: var(--text-soft);
-      font-size: 0.78rem;
-      cursor: pointer;
-      display: inline-flex;
-      align-items: center;
-      gap: 6px;
-      transition: all 0.15s ease;
-    }
-
-    .tone-btn span.dot {
-      width: 6px;
-      height: 6px;
-      border-radius: 50%;
-      background: rgba(148,163,184,0.9);
-    }
-
-    .tone-btn.active {
-      border-color: var(--accent);
-      background: var(--accent-soft);
-      color: var(--accent);
-      box-shadow: 0 10px 24px var(--accent-strong);
-    }
-
-    .tone-btn.active span.dot {
-      background: var(--accent);
-    }
-
-    .btn-row {
-      margin-top: 12px;
-      display: flex;
-      flex-wrap: wrap;
-      gap: 9px;
-      align-items: center;
-    }
-
-    button {
-      border-radius: 999px;
-      border: none;
-      padding: 9px 18px;
-      font-size: 0.86rem;
-      font-weight: 600;
-      cursor: pointer;
-      display: inline-flex;
-      align-items: center;
-      gap: 6px;
-      transition: all 0.15s ease;
-    }
-
-    button#generate {
-      background: linear-gradient(135deg, #38bdf8, #0ea5e9);
-      color: #0b1120;
-      box-shadow:
-        0 14px 30px rgba(56,189,248,0.45),
-        0 0 0 1px rgba(8,47,73,0.9);
-    }
-
-    button#generate:disabled {
-      opacity: 0.65;
-      cursor: wait;
-      box-shadow: none;
-    }
-
-    button#copy {
-      background: rgba(15,23,42,0.96);
-      color: var(--text-soft);
-      border: 1px solid var(--border-subtle);
-    }
-
-    button#copy:hover {
-      border-color: var(--accent);
-      color: var(--accent);
-    }
-
-    .status {
-      margin-top: 4px;
-      font-size: 0.78rem;
-      color: var(--text-soft);
-      min-height: 1rem;
-    }
-
-    .status.error {
-      color: var(--danger);
-    }
-
-    footer {
-      margin-top: 10px;
-      font-size: 0.72rem;
-      color: var(--text-soft);
-      display: flex;
-      justify-content: space-between;
-      gap: 8px;
-      flex-wrap: wrap;
-    }
-
-    .pill {
-      padding: 3px 8px;
-      border-radius: 999px;
-      background: rgba(15,23,42,0.98);
-      border: 1px solid rgba(51,65,85,0.9);
-    }
-
-    /* 🎙️ Mise en page pour les instructions + micro */
-    .instructions-row {
-      display: flex;
-      gap: 8px;
-      align-items: flex-start;
-    }
-
-    .instructions-row textarea {
-      flex: 1;
-      min-height: 70px;
-    }
-
-    .icon-btn {
-      padding: 8px 10px;
-      border-radius: 999px;
-      background: rgba(15,23,42,0.96);
-      border: 1px solid var(--border-subtle);
-      color: var(--text-soft);
-      font-size: 1rem;
-      flex-shrink: 0;
-    }
-
-    .icon-btn.listening {
-      border-color: var(--accent);
-      box-shadow: 0 0 0 1px rgba(56,189,248,0.6);
-    }
-
-    .mic-status {
-      margin-top: 4px;
-      font-size: 0.75rem;
-      color: var(--text-soft);
-      min-height: 0.9rem;
-    }
-  </style>
-</head>
-<body>
-  <div class="shell">
-    <div class="app">
-      <div class="grid-overlay"></div>
-
-      <header>
-        <div class="title-block">
-          <h1>
-            Assistant IA – Réponses mails
-            <span class="chip">Mourad • Edition Pro</span>
-          </h1>
-          <p class="subtitle">
-            Colle un mail, choisis le ton, et laisse l’IA préparer une réponse prête à envoyer dans Spark / FastMail.
-          </p>
-        </div>
-        <div class="badge">
-          <span class="badge-dot"></span>
-          Backend sécurisé • OpenAI
-        </div>
-      </header>
-
-      <main>
-        <!-- PANEL GAUCHE -->
-        <section class="panel">
-          <div class="panel-inner">
-            <h2><span class="icon">📥</span> Mail reçu</h2>
-            <p class="helper">
-              Colle ici le mail ou la conversation. Tu peux inclure plusieurs messages, l’IA se débrouille avec le contexte.
-            </p>
-
-            <label for="mailInput">Contenu du mail</label>
-            <textarea id="mailInput" placeholder="Ex : Bonjour Mourad, nous revenons vers vous concernant..."></textarea>
-
-            <div class="row">
-              <div>
-                <label>Ton de la réponse</label>
-                <div class="tone-buttons" id="toneButtons">
-                  <button type="button" class="tone-btn active" data-tone="professionnel">
-                    <span class="dot"></span> Pro
-                  </button>
-                  <button type="button" class="tone-btn" data-tone="amical">
-                    <span class="dot"></span> Amical
-                  </button>
-                  <button type="button" class="tone-btn" data-tone="ferme mais poli">
-                    <span class="dot"></span> Ferme mais poli
-                  </button>
-                  <button type="button" class="tone-btn" data-tone="très concis">
-                    <span class="dot"></span> Très concis
-                  </button>
-                </div>
-              </div>
-              <div>
-                <label for="extra">Tes instructions pour la réponse</label>
-                <div class="instructions-row">
-                  <textarea id="extra" rows="3" placeholder="Dicte ou écris ce que tu veux que l’IA fasse (ex : propose un créneau mardi, reste très bref, tutoie…)"></textarea>
-                  <button id="micExtraBtn" type="button" class="icon-btn" title="Dicter tes instructions">🎙️</button>
-                </div>
-                <p id="micStatus" class="mic-status"></p>
-              </div>
-            </div>
-
-            <div class="btn-row">
-              <button id="generate">⚡ Générer la réponse IA</button>
-              <button id="copy">📋 Copier la réponse</button>
-              <span class="status" id="status"></span>
-            </div>
-          </div>
-        </section>
-
-        <!-- PANEL DROIT -->
-        <section class="panel">
-          <div class="panel-inner">
-            <h2><span class="icon">✍️</span> Réponse générée</h2>
-            <p class="helper">
-              Relis, ajuste si nécessaire, puis colle dans ton client mail. Utilisable avec FastMail, Spark, Gmail, etc.
-            </p>
-
-            <label for="replyOutput">Texte de la réponse</label>
-            <textarea id="replyOutput" placeholder="La réponse IA apparaîtra ici…"></textarea>
-
-            <footer>
-              <span class="pill">
-                💡 Astuce : garde le ton “Pro” pour le travail, “Amical” pour le perso, “Ferme” pour les relances.
-              </span>
-              <span>
-                Traitement côté serveur : ta clé OpenAI reste protégée (Render).
-              </span>
-            </footer>
-          </div>
-        </section>
-      </main>
-    </div>
-  </div>
-
-  <script>
-    // 🔹 Pré-remplissage automatique depuis l'URL : ?mail=...
-    (function preloadMailFromUrl() {
-      try {
-        const params = new URLSearchParams(window.location.search);
-        const mail = params.get("mail");
-        if (mail) {
-          const textarea = document.getElementById("mailInput");
-          if (textarea) {
-            textarea.value = mail;
-          }
-        }
-      } catch (e) {
-        console.error("Erreur lors du préchargement du mail depuis l'URL", e);
-      }
-    })();
-
-    const toneButtons = document.getElementById("toneButtons");
-    let selectedTone = "professionnel";
-
-    toneButtons.addEventListener("click", (e) => {
-      const btn = e.target.closest(".tone-btn");
-      if (!btn) return;
-      document.querySelectorAll(".tone-btn").forEach(b => b.classList.remove("active"));
-      btn.classList.add("active");
-      selectedTone = btn.dataset.tone;
-    });
-
-    const generateBtn = document.getElementById("generate");
-    const copyBtn = document.getElementById("copy");
-    const statusEl = document.getElementById("status");
-
-    generateBtn.addEventListener("click", async () => {
-      const mailInput = document.getElementById("mailInput").value.trim();
-      const extra = document.getElementById("extra").value.trim();
-      const replyOutput = document.getElementById("replyOutput");
-
-      if (!mailInput) {
-        alert("Colle d’abord le mail reçu.");
-        return;
-      }
-
-      generateBtn.disabled = true;
-      statusEl.classList.remove("error");
-      statusEl.textContent = "Génération en cours…";
-
-      try {
-        const response = await fetch("https://assistant-mail-backend.onrender.com/api/generate", {
-          method: "POST",
-          headers: {
-            "Content-Type": "application/json"
-          },
-          body: JSON.stringify({
-            mailInput,
-            extra,
-            tone: selectedTone
-          })
-        });
-
-        if (!response.ok) {
-          throw new Error("Erreur API");
-        }
-
-        const data = await response.json();
-        replyOutput.value = data.reply || "";
-        statusEl.textContent = "Réponse générée ✅ – relis puis colle-la dans Spark / FastMail.";
-      } catch (err) {
-        console.error(err);
-        statusEl.textContent = "Erreur lors de la génération. Réessaie dans un instant.";
-        statusEl.classList.add("error");
-      } finally {
-        generateBtn.disabled = false;
-      }
-    });
-
-    copyBtn.addEventListener("click", () => {
-      const replyOutput = document.getElementById("replyOutput");
-      if (!replyOutput.value.trim()) {
-        alert("Il n’y a pas encore de réponse à copier.");
-        return;
-      }
-      replyOutput.select();
-      document.execCommand("copy");
-      statusEl.textContent = "Réponse copiée dans le presse-papiers ✅";
-      statusEl.classList.remove("error");
-    });
-
-    // 🎙️ Dictée vocale pour le champ "extra" (instructions) – version simplifiée / plus robuste
-    (function setupVoiceForExtra() {
-      const micBtn = document.getElementById("micExtraBtn");
-      const extraInput = document.getElementById("extra");
-      const micStatus = document.getElementById("micStatus");
-
-      if (!micBtn || !extraInput || !micStatus) return;
-
-      let recognition;
-      let isListening = false;
-
-      if ("SpeechRecognition" in window || "webkitSpeechRecognition" in window) {
-        const SpeechRecognition =
-          window.SpeechRecognition || window.webkitSpeechRecognition;
-
-        recognition = new SpeechRecognition();
-        recognition.lang = "fr-FR";
-        recognition.continuous = true;      // tu peux parler plus longtemps
-        recognition.interimResults = false; // on ne gère que le texte final
-
-        micBtn.addEventListener("click", () => {
-          if (!isListening) {
-            recognition.start();
-            isListening = true;
-            micBtn.classList.add("listening");
-            micBtn.textContent = "🛑";
-            micStatus.textContent = "Parle, j’écoute tes instructions…";
-          } else {
-            recognition.stop();
-          }
-        });
-
-        recognition.onresult = (event) => {
-          let text = "";
-
-          // On récupère tous les résultats finaux
-          for (let i = event.resultIndex; i < event.results.length; i++) {
-            if (event.results[i].isFinal) {
-              text += event.results[i][0].transcript;
-            }
-          }
-
-          text = text.trim();
-          if (text) {
-            extraInput.value =
-              (extraInput.value ? extraInput.value + " " : "") + text;
-          }
-        };
-
-        recognition.onend = () => {
-          isListening = false;
-          micBtn.classList.remove("listening");
-          micBtn.textContent = "🎙️";
-          micStatus.textContent = "";
-        };
-
-        recognition.onerror = (event) => {
-          console.error(event);
-          isListening = false;
-          micBtn.classList.remove("listening");
-          micBtn.textContent = "🎙️";
-          micStatus.textContent = "Erreur micro : " + event.error;
-        };
-      } else {
-        micStatus.textContent =
-          "La dictée vocale n’est pas supportée sur ce navigateur (essaie Chrome ou Edge).";
-      }
-    })();
-  </script>
-</body>
-</html>
+      /* … ton CSS actuel ici, rien d’autre à changer … */
